<resources>
    <string name="app_name">Quizizz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sing_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="privacy">By using our app, you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="exit_quiz">Exit Quiz</string>
    <string name="next">Next</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="take_new_quiz">Take New Quiz</string>
    <string name="quiz_result">Quiz Result</string>

    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <item name="android:textColorHint">@color/white</item>
        <item name="boxStrokeColor">@color/white</item>

    </style>

    <style name="ErrorAppearance" parent="TextAppearance.Design.Error">

        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#931a25</item>

    </style>

    <style name="HintAppearance" parent="TextAppearance.Design.Hint">

        <item name="android:textSize">15sp</item>
        <item name="android:textColor">@color/white</item>

    </style>

    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
        <item name="colorAccent">@color/dialogButtonText</item>
    </style>

</resources>