<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".Fragment.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/linear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:background="@drawable/sign_up_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_email"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="@null"
                    android:hint="@string/email_address"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorAppearance"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/HintAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/HintAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_email"
                        android:inputType="textEmailAddress"
                        android:paddingEnd="13dp"
                        android:textAppearance="@style/HintAppearance"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_password"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/password"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorAppearance"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/HintAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ed_email"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/HintAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingEnd="13dp"
                        android:textAppearance="@style/HintAppearance"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/sing_up"
                    app:backgroundTint="@null" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/already_have_an_account"
                        android:textColor="#414446"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/privacy"
                    android:textColor="#CCFFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminateTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>