<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.ResultFragment">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/list_screen_background"
            android:elevation="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/quiz_result"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linear"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cpb_background_progressbar_color="#D2EDFC"
                    app:cpb_background_progressbar_width="5dp"
                    app:cpb_progress_direction="to_right"
                    app:cpb_progressbar_color="@color/purple_700"
                    app:cpb_progressbar_width="7dp"
                    android:layout_marginTop="50dp"
                    app:cpb_progress="50"
                    app:cpb_round_border="false"
                    app:layout_constraintBottom_toTopOf="@id/correct"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_Result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:textColor="#414446"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/progressBar"
                    app:layout_constraintEnd_toEndOf="@id/progressBar"
                    app:layout_constraintStart_toStartOf="@id/progressBar"
                    app:layout_constraintTop_toTopOf="@id/progressBar" />

                <LinearLayout
                    android:id="@+id/correct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toTopOf="@id/wrong"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/correct_answer"
                        android:textColor="@color/purple_700"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/correctAnswer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wrong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toTopOf="@id/not"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/correct">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Wrong Answer   :"
                        android:textColor="@color/purple_700"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wrongtAnswer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/not"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toTopOf="@id/btn_takeNewQuiz"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wrong">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Not Answered   :"
                        android:textColor="@color/purple_700"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/notAnswer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_takeNewQuiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/button"
                    android:drawableEnd="@drawable/ic_new"
                    android:text="@string/take_new_quiz"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/not" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>
</layout>